add sign-out and change pwd elements
- hidden until sign-in

--- a/index.html
+++ b/index.html
@@ -54,7 +54,23 @@
           </form>
         </div>
       </div>
+
+      <!-- hidden until successful log in -->
+      <div class="nav-item dropdown hidden">
+        <a class="nav-link dropdown-toggle" href="#" id="change-password-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          change password
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="change-password-dropdown">
+          <form class="dropdown-item">
+            <input class="form-control mr-sm-2" type="password" placeholder="old" aria-label="old">
+            <input class="form-control mr-sm-2" type="password" placeholder="new" aria-label="new">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">change password</button>
+          </form>
+        </div>
+      </div>
+      <button class="btn btn-outline-secondary my-2 my-sm-0 hidden" type="submit">sign out</button>
     </div>
+
   </nav>
 
   <!-- create a new survey -->
