--- a/index.html
+++ b/index.html
@@ -29,45 +29,53 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
       </ul>
+
+      <!-- SIGN UP -->
       <div class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="sign-up-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           sign up
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="sign-up-dropdown">
-          <form class="dropdown-item">
-            <input class="form-control mr-sm-2" type="text" placeholder="email" aria-label="email">
-            <input class="form-control mr-sm-2" type="password" placeholder="password" aria-label="password">
-            <input class="form-control mr-sm-2" type="password" placeholder="confirm password" aria-label="confirm password">
+          <form id="sign-up-form" class="dropdown-item">
+            <input class="form-control mr-sm-2" name="credentials[email]" type="text" placeholder="email" aria-label="email">
+            <input class="form-control mr-sm-2" name="credentials[password]" type="password" placeholder="password" aria-label="password">
+            <input class="form-control mr-sm-2" name="credentials[password_confirmation]" type="password" placeholder="confirm password" aria-label="confirm password">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">sign up</button>
           </form>
         </div>
       </div>
+
+      <!-- SIGN IN -->
       <div class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="sign-in-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           sign in
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="sign-in-dropdown">
-          <form class="dropdown-item">
-            <input class="form-control mr-sm-2" type="text" placeholder="email" aria-label="email">
-            <input class="form-control mr-sm-2" type="password" placeholder="password" aria-label="password">
+          <form id="sign-in-form" class="dropdown-item">
+            <input class="form-control mr-sm-2" name="credentials[email]" type="text" placeholder="email" aria-label="email">
+            <input class="form-control mr-sm-2" name="credentials[password]" type="password" placeholder="password" aria-label="password">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">sign in</button>
           </form>
         </div>
       </div>
 
       <!-- hidden until successful log in -->
+
+      <!-- CHANGE PASSWORD -->
       <div class="nav-item dropdown hidden">
         <a class="nav-link dropdown-toggle" href="#" id="change-password-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           change password
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="change-password-dropdown">
-          <form class="dropdown-item">
-            <input class="form-control mr-sm-2" type="password" placeholder="old" aria-label="old">
-            <input class="form-control mr-sm-2" type="password" placeholder="new" aria-label="new">
+          <form id="change-password-form" class="dropdown-item">
+            <input class="form-control mr-sm-2" name="passwords[old]" type="password" placeholder="old" aria-label="old">
+            <input class="form-control mr-sm-2" name="passwords[new]" type="password" placeholder="new" aria-label="new">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">change password</button>
           </form>
         </div>
       </div>
+
+      <!-- SIGN OUT -->
       <button class="btn btn-outline-secondary my-2 my-sm-0 hidden" type="submit">sign out</button>
     </div>
 
@@ -77,7 +85,7 @@
   <div class="container py-3">
     <div class="row justify-content-center">
       <div class="col-md-6">
-        <form class="">
+        <form id="create-survey-form" class="">
           <input class="form-control mr-sm-2" type="text" placeholder="question" aria-label="question">
           <input class="form-control mr-sm-2" type="text" placeholder="asked at" aria-label="asked at">
           <button class="btn btn-block btn-primary my-2 my-sm-0" type="submit">add question</button>
