--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <div id="survey-form-row" class="row justify-content-center pb-2 hidden">
       <div class="col-md-6">
         <form id="create-survey-form" class="">
-          <input class="form-control mr-sm-2" type="text" placeholder="question" aria-label="question">
-          <input class="form-control mr-sm-2" type="text" placeholder="asked at" aria-label="asked at">
+          <input class="form-control mr-sm-2" name="survey[question]" type="text" placeholder="question" aria-label="question">
+          <input class="form-control mr-sm-2" name="survey[location]" type="text" placeholder="asked at" aria-label="asked at">
           <button class="btn btn-block btn-primary my-2 my-sm-0" type="submit">add question</button>
         </form>
       </div>
