--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
   <!-- survey card matrix -->
   <div class="container pt-2 pb-3 mb-5">
-    <div class="row justify-content-center">
+    <div id="surveys-matrix" class="row justify-content-center">
 
       <div class="card m-1" style="width: 18rem;">
         <div class="card-body">
