add in chart.js and use it
- require chart.js in survey/ui
- create survey chart after answering survey
- display chart in survey's card

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
   </nav>
 
   <!-- create a new survey -->
+  <div class="chart-container" style="height:200px; width:200px">
+    <canvas class="the-chart"></canvas>
+  </div>
+
   <div class="container pt-4">
     <div id="survey-form-placeholder" class="row justify-content-center">
       <div class="alert alert-primary fade show" role="alert">
