add/remove hidden class appropriately

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- NAV BAR -->
 
   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Anything but Trivial!</a>
+    <a class="navbar-brand" href="#">Anything but Trivial</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -91,7 +91,7 @@
     </div>
     <div id="survey-form-gateway" class="row justify-content-center hidden">
       <div class="col-6">
-        <button id="show-create-form" class="btn btn-block btn-primary my-2 my-sm-0" type="submit">click to add a question!</button>
+        <button id="create-form-shower" class="btn btn-block btn-primary my-2 my-sm-0" type="submit">click to add a question!</button>
       </div>
     </div>
     <!-- <div id="survey-form-row" class="row justify-content-center pb-2 hidden">
