add linked in link

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </li>
               </ul>
               <div class="card-body align-self-center">
-                <p class="card-text">Submitted by Vince</p>
+                <p class="card-text">Submitted by jasper</p>
               </div>
             </div>
 
@@ -162,7 +162,7 @@
                 <!-- </div> -->
               </div>
               <div class="card-body align-self-center">
-                <p class="card-text">Submitted by Vince</p>
+                <p class="card-text">Submitted by jasper</p>
               </div>
             </div>
 
@@ -183,7 +183,7 @@
   <nav class="navbar fixed-bottom npt-1 navbar-dark" style="background-color: #010006; color: #fdc52e;">
     <a class="navbar-brand" href="#"></a>
     <span class="navbar-text font-weight-light">
-      Designed and coded with ❤️ by <a href="#">Vince Casbarro</a>
+      Designed and coded with ❤️ by <a href="https://www.linkedin.com/in/vmcasbarro/">Vince Casbarro</a>
     </span>
   </nav>
 
