change color of jasper in demo

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </li>
               </ul>
               <div class="card-body align-self-center">
-                <p class="card-text">Submitted by jasper</p>
+                <p class="card-text text-secondary">Submitted by jasper</p>
               </div>
             </div>
 
@@ -162,7 +162,7 @@
                 <!-- </div> -->
               </div>
               <div class="card-body align-self-center">
-                <p class="card-text">Submitted by jasper</p>
+                <p class="card-text text-secondary">Submitted by jasper</p>
               </div>
             </div>
 
