add some tooltip code, but commented out for now.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
     <div id="survey-form-placeholder" class="row justify-content-center">
       <div class="alert alert-primary" role="alert">
         Sign in to see all questions and log your own.
+
+        <!-- TODO TOOLTIP: work in progress -->
+
+        <!-- <span class=tooltips>(Learn more)
+          <span class="tooltiptext">
+            Anything but Trivial is designed to log interesting and challenging bar trivia questions, and allow others to answer them! After signing in, you can view all questions in the database, answer questions, or submit your own.
+          </span>
+        </span> -->
+
       </div>
     </div>
     <div id="survey-form-gateway" class="row justify-content-center hidden">
