update button style and hide demo container

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     </div>
     <div id="survey-form-gateway" class="row justify-content-center hidden">
-      <div class="col-6">
+      <div class="col-md-6">
         <button id="create-form-shower" class="btn btn-block btn-dark my-2 my-sm-0" type="submit">add a question</button>
       </div>
     </div>
@@ -133,7 +133,7 @@
   </div>
 
   <!-- demo -->
-  <div class="container pt-2 pb-3 mb-5">
+  <div id="demo-container" class="container pt-2 pb-3 mb-5">
     <div id="demo-surveys-matrix" class="row justify-content-center">
 
             <div class="card m-1" style="width: 18rem;">
@@ -183,7 +183,7 @@
 
 
   <!-- survey card matrix -->
-  <div class="container pt-2 pb-3 mb-5">
+  <div class="container pt-4 pb-3 mb-5">
     <div id="surveys-matrix" class="row justify-content-center">
     </div>
   </div>
